// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SubscriptionRow for a single subscriptions matches the snapshot 1`] = `
.c1 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 64px;
}

.c5 {
  font-size: 14px;
  padding-left: 40px;
}

.c5:first-child {
  padding-left: 0;
}

.c5::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c8 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:first-child {
  padding-left: 0;
}

.c8::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Subscriptions";
}

.c13 {
  min-width: 102px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:first-child {
  padding-left: 0;
}

.c13::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Used on";
}

.c15 {
  min-width: 198px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:first-child {
  padding-left: 0;
}

.c15::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Next billing";
}

.c17 {
  min-width: 120px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c17:first-child {
  padding-left: 0;
}

.c17::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Billing type";
}

.c7 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c18 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c12 {
  -webkit-flex: 1 0 100px;
  -ms-flex: 1 0 100px;
  flex: 1 0 100px;
}

.c3 {
  height: 48px;
}

.c6 {
  height: inherit;
}

.c0 {
  color: inherit;
}

.c10 {
  color: inherit;
  font-weight: bold;
}

.c9 {
  font-size: 14px;
  padding-left: none;
}

.c2 {
  height: 32px;
  width: 32px;
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c5 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c8 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c13 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c13 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c15 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c15 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    display: none;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:1355px ) {
  .c18 {
    padding-left: 0px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 {
    max-width: 120px;
    padding-left: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    max-width: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c14 {
    min-width: 158px;
    padding-left: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c14 {
    max-width: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 {
    max-width: 140px;
    padding-left: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    max-width: none;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    padding-left: 0;
  }
}

<li
  className="c0 c1"
>
  <span
    className="c2 c3 c4 c5"
  >
    <img
      alt=""
      className="c6"
      src="icon.png"
    />
  </span>
  <span
    className="c7 c8"
  >
    name
    <div
      className="c9"
    >
      <span
        className="c10"
      >
        Active
      </span>
       - 
      subscriptionNumber
    </div>
  </span>
  <span
    className="c11 c12 c13"
  >
    0/2 sites
  </span>
  <span
    className="c14 c12 c15"
  >
    <span>
      January 1, 2028
    </span>
    <div
      className="c9"
    >
      <span>
        $0.01
      </span>
    </div>
  </span>
  <span
    className="c16 c12 c17"
  >
    Automatic renewal
  </span>
  <span
    className="c18 c5"
  />
</li>
`;

exports[`the SubscriptionRow for multiple subscriptions matches the snapshot 1`] = `
.c1 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 64px;
}

.c5 {
  font-size: 14px;
  padding-left: 40px;
}

.c5:first-child {
  padding-left: 0;
}

.c5::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c8 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8:first-child {
  padding-left: 0;
}

.c8::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Subscriptions";
}

.c13 {
  min-width: 102px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:first-child {
  padding-left: 0;
}

.c13::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Used on";
}

.c15 {
  min-width: 198px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:first-child {
  padding-left: 0;
}

.c15::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Next billing";
}

.c17 {
  min-width: 120px;
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c17:first-child {
  padding-left: 0;
}

.c17::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: "Billing type";
}

.c7 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c18 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c12 {
  -webkit-flex: 1 0 100px;
  -ms-flex: 1 0 100px;
  flex: 1 0 100px;
}

.c3 {
  height: 48px;
}

.c23 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  background-color: #64a60a;
  color: #fff;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  -webkit-filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  border-radius: 4px;
  font: 700 14px/24px "Open Sans",sans-serif;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c23:hover,
.c23:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c23:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c22 {
  text-shadow: 0px 0px 2px #000;
}

.c21 {
  background-color: transparent;
  background-repeat: no-repeat;
  background-image: url( chevron-right.svg );
  background-position: center;
  background-size: 24px;
  width: 48px;
  height: 48px;
  cursor: pointer;
  box-shadow: none;
  border: 0;
}

.c20 {
  -webkit-transform: rotate( 90deg );
  -ms-transform: rotate( 90deg );
  transform: rotate( 90deg );
}

.c20:hover,
.c20:active {
  -webkit-transform: rotate( 90deg );
  -ms-transform: rotate( 90deg );
  transform: rotate( 90deg );
  box-shadow: 0 0 0 0 rgb( 0,0,0,0),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6 {
  height: inherit;
}

.c0 {
  color: inherit;
}

.c10 {
  color: inherit;
  font-weight: bold;
}

.c9 {
  font-size: 14px;
  padding-left: none;
}

.c2 {
  height: 32px;
  width: 32px;
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c5 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c8 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c13 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c13 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c15 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c15 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c17 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    display: none;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:1355px ) {
  .c18 {
    padding-left: 0px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 {
    max-width: 120px;
    padding-left: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    max-width: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c14 {
    min-width: 158px;
    padding-left: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c14 {
    max-width: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c16 {
    max-width: 140px;
    padding-left: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    max-width: none;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    padding-left: 0;
  }
}

@media screen and ( min-width:1356px ) {
  .c19 {
    width: 152px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<li
  className="c0 c1"
  onClick={[Function]}
>
  <span
    className="c2 c3 c4 c5"
  >
    <img
      alt=""
      className="c6"
      src="icon.png"
    />
  </span>
  <span
    className="c7 c8"
  >
    name
    <div
      className="c9"
    >
      <span
        className="c10"
      >
        Active
      </span>
    </div>
  </span>
  <span
    className="c11 c12 c13"
  >
    1/4 sites
  </span>
  <span
    className="c14 c12 c15"
  />
  <span
    className="c16 c12 c17"
  >
    
  </span>
  <span
    className="c18 c5"
  >
    <div
      className="c19"
    >
      <button
        className="c20 c21 c22 c23"
        onClick={[Function]}
        type="button"
      />
    </div>
  </span>
</li>
`;
